[metadata]
version = 0.1.2
description = Generate reports for spaCy models.
url = https://github.com/koaning/spacy-report
author = Vincent D. Warmerdam
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    
[options.entry_points]
# This is a sneaky lie: we're only doing this to get spaCy to import the
# package, so that it installs our CLI extension.
spacy_cli =
    report = spacy_report.__main__:app
